Css on mobile issues

--- a/css/style.css
+++ b/css/style.css
@@ -577,4 +577,7 @@ main {
     main {
         margin-left: 0;
     }
+    .BlogItem {
+        min-width: 350px;
+    }
 }
